src/components/PreviewForm/PreviewForm.css
@import '../variables.css';

.root {
  composes: root from '../ListItem/ListItem.css';

  min-height: 36px;
}

.container {
  composes: container from '../ListItem/ListItem.css';
}

.avatar {
  composes: avatar from '../ListItem/ListItem.css';
}

.status {
  composes: status from '../PreviewListItem/PreviewListItem.css';
}

.statusButton {
  display: block;
  border: 0;
  background: transparent;
  padding: 0;
  cursor: pointer;
  transition: box-shadow 200ms ease-in, translate 200ms ease-in;
  outline: none;
  line-height: 1;
}

.statusButton:hover {
  box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.117647) 0px 1px 4px;
}

.itemTitle {
  composes: itemTitle from '../ListItem/ListItem.css';
}

.content {
  composes: content from '../ListItem/ListItem.css';

  padding-right: 16px;
  padding-left: 16px;
}

.spacer {
  composes: spacer from '../ListItem/ListItem.css';
}

.actions {
  composes: actions from '../ListItem/ListItem.css';
}

.action {
  composes: action from '../ListItem/ListItem.css';

  display: block;
}

